<resources>
    <string name="app_name">EspectroCare</string>
    <string name="sexo">Sexo</string>

    <!-- Agenda -->
    <string name="agenda_logo">EspectroCare</string>
    <string name="agenda_notificacoes">Notificações</string>
    <string name="agenda_perfil">Perfil</string>
    <string name="agenda_lembrete">Lembrete</string>
    <string name="agenda_mes_anterior">Mês anterior</string>
    <string name="agenda_proximo_mes">Próximo mês</string>
    <string name="agenda_cores_profissionais">Cores dos profissionais</string>
    <string name="agenda_especialidade">Especialidade</string>
    <string name="agenda_horario">Horário</string>
    <string name="agenda_modalidade">Modalidade</string>
    <string name="agenda_detalhes">Detalhes</string>
    <string name="agenda_sem_mais_consultas">Você não tem mais consultas para visualizar</string>
    <string name="agenda_sem_consultas">Você ainda não tem consultas agendadas neste mês</string>
    <string name="agenda_erro">Não foi possível carregar sua agenda. Tente novamente.</string>
    <string name="agenda_lembrete_descricao">Você possui uma consulta às %1$s com %2$s</string>
    <string name="agenda_secao_dia">Consultas do dia %1$s de %2$s</string>
    <string name="agenda_paciente">Pcte. %1$s</string>
    <string name="agenda_nova_consulta">Nova consulta</string>
    <string name="agendar_tipo_consulta">Tipo de Consulta</string>
    <string name="agendar_formato_consulta">Formato da Consulta</string>
    <string name="agendar_data">Data</string>
    <string name="agendar_horario">Horário</string>
    <string name="agendar_preencha_campos">Preencha o tipo, o formato, a data e o horário da consulta.</string>
    <string name="agendar_consulta_agendada">Consulta agendada!</string>
    <string name="agendar_consulta_alterada">Consulta alterada!</string>
    <string name="agendar_tipo_fonoaudiologia">Fonoaudiologia</string>
    <string name="agendar_tipo_terapia_ocupacional">Terapia Ocupacional</string>
    <string name="agendar_tipo_psiquiatria">Psiquiatria</string>
    <string name="agendar_tipo_psicologia">Psicologia</string>
    <string name="agendar_tipo_neuropediatria">Neuropediatria</string>
    <string name="agendar_tipo_nutricao">Nutrição</string>
    <string name="agenda_titulo_consulta">Consulta com %1$s</string>
    <string name="agenda_dom">DOM</string>
    <string name="agenda_seg">SEG</string>
    <string name="agenda_ter">TER</string>
    <string name="agenda_qua">QUA</string>
    <string name="agenda_qui">QUI</string>
    <string name="agenda_sex">SEX</string>
    <string name="agenda_sab">SAB</string>
    <string name="agenda_online">Online</string>
    <string name="agenda_presencial">Presencial</string>
    <string name="agenda_fonoaudiologo">Fonoaudiólogo</string>
    <string name="agenda_terapeuta_ocupacional">T. Ocupacional</string>
    <string name="agenda_psiquiatra">Psiquiatra</string>
    <string name="agenda_psicologo">Psicólogo</string>
    <string name="agenda_neuropediatra">Neuropediatra</string>
    <string name="agenda_nutricionista">Nutricionista</string>

    <!-- Privacidade e Segurança -->
    <string name="privacidade_editar">Editar</string>
    <string name="privacidade_salvar">Salvar</string>

    <!-- Perfil do profissional -->
    <string name="profissional_favoritar">Favoritar</string>
    <string name="profissional_favoritado">Favoritado</string>
    <string name="profissional_total_avaliacoes">(%1$d Avaliações)</string>
    <string name="profissional_abordagem">Abordagem:</string>
    <string name="profissional_publico_alvo">Público alvo:</string>
    <string name="profissional_sobre_mim">Sobre mim:</string>
    <string name="profissional_mensagem_whatsapp">Olá, %1$s! Encontrei seu perfil no EspectroCare e gostaria de agendar uma consulta.</string>
    <string name="profissional_whatsapp_indisponivel">Não foi possível abrir o WhatsApp.</string>
    <string name="profissional_sem_avaliacoes">Nenhuma avaliação com essa nota.</string>

    <!-- Geral -->
    <string name="voltar">Voltar</string>

    <!-- Home -->
    <string name="home_erro_abrir_link">Não foi possível abrir a página de aprendizagem.</string>
</resources>